# jogo-da-forca

./: README.md  helpers.py  jogo1.py  main.py  outputs.py  pyproject.toml  random_words.py  report.html
files/: words.txt
functions/: helpers.py  outputs.py  random_words.py
tests/: test_helpers.py
